--- a/packages/utils/scss/layout/_display.scss
+++ b/packages/utils/scss/layout/_display.scss
@@ -53,6 +53,8 @@
 /// @group display
 /// @contextType css
 
+// TODO tables' parts
+
 @mixin kendo-utils--layout--display() {
 
     // Display utility classes
