--- a/packages/utils/scss/background/index.import.scss
+++ b/packages/utils/scss/background/index.import.scss
@@ -1,6 +1,8 @@
+@import "./_background-clip.scss";
 @import "./_background-color.scss";
 
 
 @mixin kendo-utils--background() {
+    @include kendo-utils--background--background-clip();
     @include kendo-utils--background--background-color();
 }
