--- a/packages/utils/scss/layout/index.import.scss
+++ b/packages/utils/scss/layout/index.import.scss
@@ -1,8 +1,13 @@
 @import "./_aspect-ratio.scss";
+@import "./_box-sizing.scss";
 @import "./_clear.scss";
+@import "./_columns.scss";
 @import "./_display.scss";
 @import "./_float.scss";
+@import "./_object-fit.scss";
+@import "./_object-position.scss";
 @import "./_overflow.scss";
+@import "./_placement.scss";
 @import "./_position.scss";
 @import "./_visibility.scss";
 @import "./_zindex.scss";
@@ -10,10 +15,15 @@
 
 @mixin kendo-utils--layout() {
     @include kendo-utils--layout--aspect-ratio();
+    @include kendo-utils--layout--box-sizing();
     @include kendo-utils--layout--clear();
+    @include kendo-utils--layout--columns();
     @include kendo-utils--layout--display();
     @include kendo-utils--layout--float();
+    @include kendo-utils--layout--object-fit();
+    @include kendo-utils--layout--object-position();
     @include kendo-utils--layout--overflow();
+    @include kendo-utils--layout--placement();
     @include kendo-utils--layout--position();
     @include kendo-utils--layout--visibility();
     @include kendo-utils--layout--zindex();
