chore(html): merge dropdowntree html rendering and hierarchy specs

--- a/packages/default/scss/treeview/_layout.scss
+++ b/packages/default/scss/treeview/_layout.scss
@@ -138,6 +138,8 @@
 
     // RTL
     .k-rtl .k-treeview,
+    [dir="rtl"] .k-treeview,
+    .k-treeview.k-rtl,
     .k-treeview[dir="rtl"] {
 
         // Treeview item
