feat(utils): add reset styles

--- a/packages/core/scss/_variables.scss
+++ b/packages/core/scss/_variables.scss
@@ -1,3 +1,5 @@
+$kendo-reset: false;
+
 // Equilateral triangle variables
 $equilateral-index: 1.7320508076 !default;
 $equilateral-height: .8660254038 !default;
